Changes in new version

Version agricolae 1-2.7 (August 30, 2017)
-------------------------------------------
In the post.hoc tests, the grouping of treatments are formed according to 
the probability of the difference between treatments and the alpha level.

The affected functions were BIB.test, DAU.test, duncan.test, durbin.test, 
friedman, HSD.test, kruskal, LSD.test, Median.test, PBIB.test, REGW.test, 
scheffe.test, SNK. Test, waller.test and waerden.test. Now there is good 
correspondence between the grouping and the pvalue.

A new function (plot.group) is included in agricolae for the graphs of 
treatment groups and their variation by range, interquartil range, 
Standard deviation and standard error.

The RANN package of suggestions was removed.

Updated documentation. 

Version agricolae 1-2.6 (August 4, 2017)
-------------------------------------------
Documentation check.

Version agricolae 1-2.5 (July 20, 2017)
-------------------------------------------
1. Add model object in output PBIB.test function.
2. procedure duncan.test is better, the limitations in convergence were corrected.
3. The influence in AMMI (type=3) is relative neighbor graph as a sub-graph.
4. The post hoc nonparametrics tests (kruskal, friedman, durbin and waerden) 
are using the criterium Fisher's least significant difference (LSD)

Version agricolae 1-2.4 (June 12, 2016)
-------------------------------------------
1. Add suggests packages: RANN and rgeos to plot AMMI
2. Concordance index in correlation function(), additional arg (method="lin").
3. New function orderPvalue(). Grouping the treatments in a comparison with p.value minimum value (alpha)
4. Test LSD.test and kruskal the adjust P.value (holm, hommel, hochberg, bonferroni, BH, BY, fdr). 
The comparison in pairs and groups give similar results.

Version agricolae 1-2.3 (October 6, 2015)
-------------------------------------------
1. REGW.test(). New function for multiple comparisons of treatments. 