@@ -1,8 +1,8 @@
 Package: agricolae
 Type: Package
 Title: Statistical Procedures for Agricultural Research
-Version: 1.2-7
-Date: 2017-09-01
+Version: 1.2-8
+Date: 2017-09-12
 Author: Felipe de Mendiburu
 Maintainer: Felipe de Mendiburu <fmendiburu@lamolina.edu.pe>
 Imports: klaR, MASS, nlme, cluster, spdep, AlgDesign, graphics
@@ -10,7 +10,7 @@ Description: Original idea was presented in the thesis "A statistical analysis t
 License: GPL
 URL: http://tarwi.lamolina.edu.pe/~fmendiburu
 NeedsCompilation: no
-Packaged: 2017-09-01 17:30:28 UTC; Luis
+Packaged: 2017-09-12 13:23:14 UTC; Luis
 Depends: R (>= 2.10)
 Repository: CRAN
-Date/Publication: 2017-09-01 20:23:17 UTC
+Date/Publication: 2017-09-12 20:38:31 UTC
